move jetty deps into jetty area

--- a/pom.xml
+++ b/pom.xml
@@ -46,25 +46,62 @@
 			</plugin>
 		</plugins>
 	</build>
-	<!--Is this just in the wrong place or what? This is for synching versions
-		of AWS libs. <dependencyManagement> <dependencies> <dependency> <groupId>com.amazonaws</groupId>
-		<artifactId>aws-java-sdk-bom</artifactId> <version>1.11.65</version> <type>pom</type>
+	<!--Is this just in the wrong place or what? This is for synching versions 
+		of AWS libs. <dependencyManagement> <dependencies> <dependency> <groupId>com.amazonaws</groupId> 
+		<artifactId>aws-java-sdk-bom</artifactId> <version>1.11.65</version> <type>pom</type> 
 		<scope>import</scope> </dependency> </dependencies> </dependencyManagement> -->
 	<dependencies>
-    <dependency>
+		<dependency>
 			<groupId>us.categorize</groupId>
 			<artifactId>api</artifactId>
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
-    <dependency>
-      <groupId>us.categorize</groupId>
-      <artifactId>naive</artifactId>
-      <version>0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>us.categorize</groupId>
-      <artifactId>naive.users</artifactId>
-      <version>0.1-SNAPSHOT</version>
-    </dependency>
+		<dependency>
+			<groupId>us.categorize</groupId>
+			<artifactId>naive</artifactId>
+			<version>0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>us.categorize</groupId>
+			<artifactId>naive.users</artifactId>
+			<version>0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-server</artifactId>
+			<version>9.3.9.v20160517</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-servlet</artifactId>
+			<version>9.3.9.v20160517</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-util</artifactId>
+			<version>9.3.9.v20160517</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.7.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.7.4</version>
+		</dependency>
+				<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.containers/jersey-container-jetty-http -->
+		<dependency>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<artifactId>jersey-container-jetty-http</artifactId>
+			<version>2.27</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson</artifactId>
+			<version>2.27</version>
+		</dependency>
+		
 	</dependencies>
 </project>
