--- a/src/main/resources/categorizeus.properties
+++ b/src/main/resources/categorizeus.properties
@@ -1,13 +1,16 @@
-REPOSITORY_TYPE=sql
 PORT=8080
-DB_USER=categorizeus
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_PASS=35789fb6e
+DB_USER=user
+DB_PASS=password
 DB_NAME=categorizeus
 MAX_UPLOAD_SIZE=3145728
 MAX_THUMB_SIZE=3145728
 MAX_THUMB_WIDTH=250
 MAX_THUMB_HEIGHT=250
-UPLOAD_STORAGE=local
-FILE_BASE=C:/Users/keefe/projects/files/
+#default is ~/projects/secrets/secrets.properties and overwrites relevant properties in this file
+SECRETS_DIR=
+#default is ~/projects/categorizeus.naive.app/src/main/resources/static
+STATIC_DIR=
+#default is ~/projects/files
+FILE_BASE=
