--- a/src/main/resources/categorizeus.properties
+++ b/src/main/resources/categorizeus.properties
@@ -1,9 +1,9 @@
 PORT=8080
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_USER=user
-DB_PASS=password
-DB_NAME=categorizeus
+DB_USER=categorizeus
+DB_PASS=35789fb6e
+DB_NAME=categories
 MAX_UPLOAD_SIZE=3145728
 MAX_THUMB_SIZE=3145728
 MAX_THUMB_WIDTH=250
