--- a/pom.xml
+++ b/pom.xml
@@ -158,5 +158,10 @@
       <artifactId>swagger-jaxrs2-servlet-initializer</artifactId>
       <version>2.0.6</version>
     </dependency>
+	<dependency>
+		<groupId>javax.activation</groupId>
+		<artifactId>activation</artifactId>
+		<version>1.1.1</version>
+	</dependency>
 	</dependencies>
 </project>
